feat: Enum 사용 및 mvc패턴 일부 적용