@@ -4,18 +4,16 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
 import java.util.stream.Collectors;
-=======
-import java.util.List;
-import java.util.Scanner;
+
 
 public class Application {
     private static final int MINIMUM_AMOUNT = 1000;
 
     public static void main(String[] args) {
-
         int ticketCount = buyLotto();
         List<InputLottoNumber> tickets = createTickets(ticketCount);
-        WinningNumber winning = WinningNumber.inputWinningNumbers();
+        WinningNumberInput input = new WinningNumberInput();
+        WinningNumber winning = input.inputWinningNumber();
         LottoStatus status = checkResult(tickets, winning);
         printResults(status, ticketCount);
     }
@@ -35,7 +33,7 @@ public class Application {
             List<Integer> picked = LottoManage.pickupLottoNumbers(lottoParts);
             List<LottoNumber> wrapped = picked.stream()
                     .map(LottoNumber::new)
-                    .collect(Collectors.toList());
+                    .toList();
 
             tickets.add(InputLottoNumber.of(wrapped));
         }
@@ -60,26 +58,12 @@ public class Application {
         Money totalPayout = status.getTotalPrizeAmount();
         double returnMoney = (double) totalPayout.getAmount() / totalCost.getAmount();
         System.out.printf("총 수익률: %.2f 입니다.%n", returnMoney);
-=======
-        int money = inputMoney();
-        int count = money / MINIMUM_AMOUNT;
-        for (int i = 0; i < count; i++) {
-            List<Integer> lottoNumbers = LottoManage.pullOutNumbers();
-            LottoManage.shuffleNumbers(lottoNumbers);
-            List<Integer> ticket = LottoManage.pickupLottoNumbers(lottoNumbers);
-            System.out.println(ticket);
-            System.out.println("내가 찾고 싶은 숫자" + ticket.contains(14));
-        }
-
     }
 
     private static int inputMoney() {
         Scanner scanner = new Scanner(System.in);
         System.out.print("구입 금액 입력(금액은 1000원 이상 입력해주세요): ");
         int money = scanner.nextInt();
-
-=======
-
         while (money < MINIMUM_AMOUNT) {
             System.out.println("구매에 필요한 금액은 1000원 이상입니다 다시 입력해주세요");
             money = scanner.nextInt();
@@ -89,5 +73,5 @@ public class Application {
 }
 
 
-=======
+
 
